# AzureSDKForRust

./: Cargo.toml
azure_sdk_auth_aad/: Cargo.toml
azure_sdk_auth_aad/src/: lib.rs
azure_sdk_core/: 2  Cargo.toml
azure_sdk_core/src/: errors.rs  lib.rs
azure_sdk_cosmos/: Cargo.toml
azure_sdk_cosmos/examples/: collection.rs  create_delete_database.rs  get_databases.rs
azure_sdk_cosmos/src/: client.rs  database.rs
azure_sdk_service_bus/: Cargo.toml
azure_sdk_service_bus/src/event_hub/: mod.rs
