[package]
name          = "azure_sdk_service_bus"
version       = "0.20.4"
description   = "Rust wrappers around Microsoft Azure REST APIs - Service Bus crate"
readme        = "README.md"
authors       = ["Francesco Cogno <francesco.cogno@outlook.com>", "Max Gortman <mgortman@microsoft.com>", "Dong Liu <doliu@microsoft.com>"]
license       = "Apache-2.0"
repository    = "https://github.com/MindFlavor/AzureSDKForRust"
documentation = "http://mindflavor.github.io/AzureSDKForRust/azure_sdk_for_rust/index.html"
homepage      = "https://github.com/MindFlavor/AzureSDKForRust"

keywords      = ["sdk", "azure", "rest", "iot", "cloud"]
categories    = ["api-bindings"]

edition       = "2018"

[dependencies]
azure_sdk_core = { path="../azure_sdk_core", version = "0.30.0" }
ring         = "*"
md5          = "*"
RustyXML     = "*"
base64       = "*"
chrono       = "*"
env_logger   = "*"
http                    = "0.1.15"
hyper                   = { version = "0.13.0-alpha.4" , features = ["unstable-stream"] }
log          = "*"
mime         = "*"
quick-error  = "*"
serde        = "*"
serde_derive = "*"
serde_json   = "*"
serde-xml-rs = "*"
time         = "*"
url          = "*"
uuid         = { version = "0.7", features = ["v4"] }
smallvec     = { version = "0.6", features = ["serde"] }
bytes        = "*"
hyper-rustls            = { version = "0.18.0-alpha.2" , features = [] }

[dev-dependencies]
tokio-core   = "0.1"

[features]
test_e2e       = []
